# gemm

./: .gitignore  CMakeLists.txt  README.md  compile.sh  main.cu
include/: cmdline.h  debug.cuh  kernels.cuh  parse_cmdline.h  runner.h  util.h
include/kernels/: kernel1_naive.cuh  kernel2_shmem.cuh  kernel3_thread_coarsen.cuh  kernel3_thread_coarsen_v1.cuh  kernel4_thread_coarsen_v2.cuh  kernel5_vectorize.cuh  kernel6_cute.cuh  kernel7_warptile.cuh
ncu_profiles/: 1_ncu_naive_kernel.ncu-rep  2_ncu_shmem_kernel.ncu-rep
sgemm/: CMakeLists.txt  sgemm.cu
sgemm/include/: sgemm.h
sgemm_runner/: CMakeLists.txt
sgemm_runner/include/sgemm_runner/: kernels.cuh  runner.h
sgemm_runner/src/: runner.cu
sgemm_runner/src/kernels/: kernel1_naive.cu
src/: main.cu  parse_cmdline.cu  runner.cu
src/kernels/: kernel1_naive.cu  kernel2_shmem.cu  kernel3_thread_coarsen_row.cu
